<resources>
    <string name="app_name">Kotlin Material Design</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="switch_to_grid">Switch to grid</string>
    <string name="linear_vertical">Linear Vertical</string>
    <string name="linear_horizontal">Linear Horizontal</string>
    <string name="staggered_vertical">Staggered Vertical</string>
    <string name="staggered_horizontal">Staggered Horizontal</string>
    <string name="show_landscape">Show Landscape</string>
    <string name="conditional_views">Conditional Views</string>
    <string name="image_icon">Image icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="explode_kotlin">Explode - Kotlin</string>
    <string name="explode_xml">Explode - XML</string>
    <string name="slide_xml">Slide - XML</string>
    <string name="slide_kotlin">Slide - Kotlin</string>
    <string name="fade_xml">Fade - XML</string>
    <string name="fade_kotlin">Fade - Kotlin</string>
    <string name="shared_element">Shared Element</string>
    <string name="ripple_with_border">Ripple With Border</string>
    <string name="ripple_without_border">Ripple Without Border</string>
    <string name="custom_ripple_with_border">Custom Ripple With Border</string>
    <string name="animations">Animations</string>
</resources>
