<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/animation"
        android:orderInCategory="100"
        android:title="@string/animations"
        app:showAsAction="never" />

    <item
        android:id="@+id/discard"
        android:icon="@drawable/ic_discard"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:orderInCategory="101"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/showLandscape"
        android:orderInCategory="102"
        android:title="@string/show_landscape"
        app:showAsAction="never"/>

    <item
        android:id="@+id/conditional"
        android:orderInCategory="102"
        android:title="@string/conditional_views"
        app:showAsAction="never"/>

    <item
        android:id="@+id/linearVertical"
        android:title="@string/linear_vertical"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item
        android:id="@+id/linearHorizontal"
        android:title="@string/linear_horizontal"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item
        android:id="@+id/grid"
        android:title="@string/switch_to_grid"
        android:orderInCategory="104"
        app:showAsAction="never" />
    <item
        android:id="@+id/staggeredVertical"
        android:title="@string/staggered_vertical"
        android:orderInCategory="105"
        app:showAsAction="never" />
    <item
        android:id="@+id/staggeredHorizontal"
        android:title="@string/staggered_horizontal"
        android:orderInCategory="106"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="107"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit"
        android:orderInCategory="108"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="109"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>