<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:padding="3dp"
    card_view:cardCornerRadius="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="3dp"
        >

        <ImageView
            android:id="@+id/imgRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/ani_cat_five"
            android:contentDescription="@string/thumbnail"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"  />

        <TextView
            android:id="@+id/imgTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            card_view:layout_constraintTop_toBottomOf="@id/imgRow"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/imgDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/description"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:textStyle="italic"
            android:gravity="center"
            card_view:layout_constraintTop_toBottomOf="@id/imgTitle"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
